Basic recent commit display

--- a/index.html
+++ b/index.html
@@ -160,5 +160,8 @@
                 console.log("Player score is " + totalScore + " and the object spawn delay is " + objRate + " ticks");
             }
         </script>
+        <br />
+        <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=Qixitch&repo=game-test&limit=2"
+  allowtransparency="true" frameborder="0" scrolling="no" width="482px" height="206px"></iframe>
     </body>
 </html>
