--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
         </script>
         <br /><br />
         <div style="text-align:center;width:480px;">
-            <button class="buttonUp" onmousedown="moveup()" onmouseup="stopMove()"></button><br><br>
-            <button class="buttonLeft" onmousedown="moveleft()" onmouseup="stopMove()"></button>
-            <button class="buttonRight" onmousedown="moveright()" onmouseup="stopMove()"></button><br><br>
-            <button class="buttonDown" onmousedown="movedown()" onmouseup="stopMove()"></button>
+            <button class="buttonUp" onmousedown="moveup()" onmouseup="stopMove()" onfocus="moveup()"></button><br><br>
+            <button class="buttonLeft" onmousedown="moveleft()" onmouseup="stopMove()" onfocus="moveleft()"></button>
+            <button class="buttonRight" onmousedown="moveright()" onmouseup="stopMove()" onfocus="moveright()"></button><br><br>
+            <button class="buttonDown" onmousedown="movedown()" onmouseup="stopMove()" onfocus="movedown()"></button>
         </div>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br /><br />
         <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=nOtVeRyCrEaTiVe&repo=game-test&limit=2"
