--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
         </script>
         <br /><br />
         <div style="text-align:center;width:480px;">
-            <button href="#" class="buttonUp" onmousedown="moveup()" onmouseup="stopMove()" mousedown="moveup()" mouseup="stopMove()" mouseover="moveup()" mouseout="stopMove()" onclick = "void(0)"></button><br><br>
-            <button href="#" class="buttonLeft" onmousedown="moveleft()" onmouseup="stopMove()" mousedown="moveleft()" mouseup="stopMove()" mouseover="moveleft()" mouseout="stopMove()" onclick = "void(0)"></button>
-            <button href="#" class="buttonRight" onmousedown="moveright()" onmouseup="stopMove()" mousedown="moveright()" mouseup="stopMove()" mouseover="moveright()" mouseout="stopMove()" onclick = "void(0)"></button><br><br>
-            <button href="#" class="buttonDown" onmousedown="movedown()" onmouseup="stopMove()" mousedown="movedown()" mouseup="stopMove()" mouseover="movedown()" mouseout="stopMove()" onclick = "void(0)"></button>
+            <button href="#" class="buttonUp" onmousedown="moveup()" onmouseup="stopMove()" onmousedown="moveup()" onmouseup="stopMove()" onmouseover="moveup()" onmouseout="stopMove()" onclick="void(0)"></button><br><br>
+            <button href="#" class="buttonLeft" onmousedown="moveleft()" onmouseup="stopMove()" onmousedown="moveleft()" onmouseup="stopMove()" onmouseover="moveleft()" onmouseout="stopMove()" onclick="void(0)"></button>
+            <button href="#" class="buttonRight" onmousedown="moveright()" onmouseup="stopMove()" onmousedown="moveright()" onmouseup="stopMove()" onmouseover="moveright()" onmouseout="stopMove()" onclick="void(0)"></button><br><br>
+            <button href="#" class="buttonDown" onmousedown="movedown()" onmouseup="stopMove()" onmousedown="movedown()" onmouseup="stopMove()" onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)"></button>
         </div>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br /><br />
         <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=nOtVeRyCrEaTiVe&repo=game-test&limit=2"
