--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
                 border: 1px solid #d3d3d3;
                 background-color: #f1f1f1;
             }
+            span {
+                border: 1px solid #d3d3d3;
+                background-color: #f1f1f1;
+            }
             .buttonUp::after {
                 content: "UP";
             }
@@ -276,10 +280,16 @@
         </script>
         <br /><br />
         <div style="text-align:center;width:480px;">
-            <button href="#" class="buttonUp" onmousedown="moveup()" onmouseup="stopMove()" onmousedown="moveup()" onmouseup="stopMove()" onmouseover="moveup()" onmouseout="stopMove()" onclick="void(0)"></button><br><br>
-            <button href="#" class="buttonLeft" onmousedown="moveleft()" onmouseup="stopMove()" onmousedown="moveleft()" onmouseup="stopMove()" onmouseover="moveleft()" onmouseout="stopMove()" onclick="void(0)"></button>
-            <button href="#" class="buttonRight" onmousedown="moveright()" onmouseup="stopMove()" onmousedown="moveright()" onmouseup="stopMove()" onmouseover="moveright()" onmouseout="stopMove()" onclick="void(0)"></button><br><br>
-            <button href="#" class="buttonDown" onmousedown="movedown()" onmouseup="stopMove()" onmousedown="movedown()" onmouseup="stopMove()" onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)"></button>
+            <button href="#" onmousedown="moveup()" onmouseup="stopMove()" onmousedown="moveup()" onmouseup="stopMove()" onmouseover="moveup()" onmouseout="stopMove()" onclick="void(0)">UP</button><br><br>
+            <button href="#" onmousedown="moveleft()" onmouseup="stopMove()" onmousedown="moveleft()" onmouseup="stopMove()" onmouseover="moveleft()" onmouseout="stopMove()" onclick="void(0)">LEFT</button>
+            <button href="#" onmousedown="moveright()" onmouseup="stopMove()" onmousedown="moveright()" onmouseup="stopMove()" onmouseover="moveright()" onmouseout="stopMove()" onclick="void(0)">RIGHT</button><br><br>
+            <button href="#" onmousedown="movedown()" onmouseup="stopMove()" onmousedown="movedown()" onmouseup="stopMove()" onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)">DOWN</button>
+        </div><br />
+        <div style="text-align:center;width:480px;">
+            <span onmouseover="moveup()" onmouseout="stopMove()" onclick="void(0)">UP</span><br><br>
+            <span onmouseover="moveleft()" onmouseout="stopMove()" onclick="void(0)">LEFT</span>
+            <span onmouseover="moveright()" onmouseout="stopMove()" onclick="void(0)">RIGHT</span><br><br>
+            <span onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)">DOWN</span>
         </div>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br /><br />
         <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=nOtVeRyCrEaTiVe&repo=game-test&limit=2"
