--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
             <button href="#" onmousedown="movedown()" onmouseup="stopMove()" onmousedown="movedown()" onmouseup="stopMove()" onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)">DOWN</button>
         </div><br />
         <div style="text-align:center;width:480px;">
-            <span onmouseover="moveup()" onmouseout="stopMove()" onclick="void(0)">UP</span><br><br>
-            <span onmouseover="moveleft()" onmouseout="stopMove()" onclick="void(0)">LEFT</span>
-            <span onmouseover="moveright()" onmouseout="stopMove()" onclick="void(0)">RIGHT</span><br><br>
-            <span onmouseover="movedown()" onmouseout="stopMove()" onclick="void(0)">DOWN</span>
+            <span onmouseover="moveup()" onmouseout="stopMove()" ontouchend="stopMove()" onclick="void(0)">UP</span><br><br>
+            <span onmouseover="moveleft()" onmouseout="stopMove()" ontouchend="stopMove()" onclick="void(0)">LEFT</span>
+            <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" onclick="void(0)">RIGHT</span><br><br>
+            <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" onclick="void(0)">DOWN</span>
         </div>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br /><br />
         <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=nOtVeRyCrEaTiVe&repo=game-test&limit=2"
