Increase button size

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             span {
                 border: 1px solid #d3d3d3;
                 background-color: #f1f1f1;
-                padding: 3px;
-                margin-left: 6px;
-                margin-right: 6px;
+                padding: 8px;
+                margin-left: 12px;
+                margin-right: 12px;
             }
             .buttonUp::after {
                 content: "UP";
@@ -292,12 +292,12 @@
         <div style="text-align:center;width:480px;">
             Dodge the RED BOXES and collect whips to increase Nathan's pleasure!<br>
             Use the ARROW KEYS or the controls below to move Nathan<br><br>
-            <span onmouseover="moveup()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">UP</span><br><br>
+            <span onmouseover="moveup()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">UP</span><br><br><br><br>
             <span onmouseover="moveleft()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">LEFT</span>
             <span onmouseover="stopMove()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">IDLE</span>
-            <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br>
+            <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br><br>
             <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span>
-        </div>
+        </div><br><br>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br><br>
         <button onclick="reloadPage()">Reset Game</button><br><br>
         <iframe src="http://tylerlh.github.com/github-latest-commits-widget/?username=nOtVeRyCrEaTiVe&repo=game-test&limit=2"
