--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             }
             
             function updateCollectionScore() {
-                myCollectionScore += 1;
+                myCollectionScore += 8;
             }
             
             function updateGameArea() {
@@ -205,8 +205,7 @@
                         updateCollectionScore();
                         myCollection[i].y += -9000;
                         myCollection[i].update();
-                    } 
-                    updateCollectionScore();
+                    }
                 }
                 myGameArea.clear();
                 myGameArea.frameNo += 1;
@@ -290,13 +289,13 @@
         </script>
         <br><br>
         <div style="text-align:center;width:480px;">
-            Dodge the RED BOXES and collect whips to increase Nathan's pleasure!<br>
-            Use the ARROW KEYS or the controls below to move Nathan<br><br>
-            <span onmouseover="moveup()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">UP</span><br><br><br><br>
+            <span onmouseover="moveup()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">UP</span><br><br><br>
             <span onmouseover="moveleft()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">LEFT</span>
             <span onmouseover="stopMove()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">IDLE</span>
-            <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br><br>
-            <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span>
+            <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br>
+            <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span><br><br>
+            Dodge the RED BOXES and collect whips to increase Nathan's pleasure!<br>
+            Use the ARROW KEYS or the controls below to move Nathan<br><br>
         </div><br><br>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br><br>
         <button onclick="reloadPage()">Reset Game</button><br><br>
