--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Typical Night at Nathan's</title>
         <meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
             canvas {
@@ -295,7 +296,7 @@
             <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br>
             <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span><br><br>
             Dodge the RED BOXES and collect whips to increase Nathan's pleasure!<br>
-            Use the ARROW KEYS or the controls below to move Nathan<br><br>
+            Use the ARROW KEYS or the controls above to move Nathan<br><br>
         </div><br><br>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br><br>
         <button onclick="reloadPage()">Reset Game</button><br><br>
