--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 if (myGameArea.frameNo == 1 || everyinterval(objRate)) {
                     x = myGameArea.canvas.width;
                     y = myGameArea.canvas.height - 200;
-                    myObstacles.push(new component(60, 20, "red", x, Math.floor(Math.random() * 270) + 1));
+                    myObstacles.push(new component(34, 20, "salt.png", x, Math.floor(Math.random() * 270) + 1, "image"));
                 }
                 for (i = 0; i < myObstacles.length; i += 1) {
                     myObstacles[i].x += -objSpeed;
@@ -235,7 +235,7 @@
                     myStatPlayer.update();
                     myStatCollection.text = "The collectable spawn delay is " + collectionRate + " ticks and the collectable speed is " + collectionSpeed;
                     myStatCollection.update();
-                    myStatObject.text = "The object spawn delay is " + objRate + " ticks and the object speed is " + objSpeed;
+                    myStatObject.text = "The obstacle spawn delay is " + objRate + " ticks and the obstacle speed is " + objSpeed;
                     myStatObject.update();
                 }
                 myGamePiece.speedX = 0;
@@ -295,7 +295,7 @@
             <span onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br>
             <span onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span><br><br>
             <strong>A TYPICAL NIGHT AT NATHAN'S HOUSE - THE GAME</strong><br>
-            Dodge the RED BOXES and collect WHIPS to increase Nathan's pleasure!<br>
+            Dodge the SALT SHAKERS while collecting WHIPS to increase Nathan's pleasure!<br>
             Use the ARROW KEYS or the controls above to move Nathan<br><br>
         </div><br><br>
         Display Object Stats <input type="checkbox" id="show-stats" checked="checked" /><br><br>
