--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Typical Night at Nathan's</title>
-        <meta id="viewport" name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta id="viewport" name="viewport" content="user-scalable=no" />
         <style>
         </style>
         <script src="assets/cacheJS.js"></script>
