--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/bootstrap.css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     </head>
-    <body class="mainElement" onload="startGame()">
+    <body class="container mainElement" onload="startGame()">
         <script>
             function reloadPage() {
         location.reload();
